--- a/package.json
+++ b/package.json
@@ -1,32 +1,49 @@
-{
-    "name": "deploynext",
+
+  {
+    "name": "testreactchakra",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-			"next": "^12.2.5",
+			"@testing-library/jest-dom": "^5.16.1",
+			"@testing-library/react": "^13.3.0",
+			"@testing-library/user-event": "^13.5.0",
+			"@types/jest": "^27.0.3",
+			"@types/node": "^16.11.14",
+			"@types/react": "^18.0.17",
+			"@types/react-dom": "^18.0.6",
 			"react": "^18.2.0",
 			"react-dom": "^18.2.0",
-			"@mui/material": "^5.2.5",
+			"react-scripts": "5.0.1",
+			"web-vitals": "^2.1.2",
+			"@chakra-ui/react": "^2.2.6",
+			"framer-motion": "^7.1.0",
 			"@emotion/react": "^11.7.1",
 			"@emotion/styled": "^11.6.0",
-			"@mui/x-date-pickers": "^5.0.0-beta.0",
-			"date-fns": "^2.28.0",
+			"@emotion/cache": "^11.10.3",
+			"@chakra-ui/icons": "^2.0.8",
 			"typescript": "^4.5.4",
 			"react-router-dom": "^6.2.1"
     },
-    "devDependencies": {
-      "@types/node": "17.0.41",
-      "@types/react": "^18.0.17",
-      "@types/react-dom": "^18.0.6",
-      "eslint": "8.17.0",
-      "eslint-config-next": "12.1.6",
-      "typescript": "4.7.3"
-    },
     "scripts": {
-      "dev": "next dev",
-      "build": "next build && next export -o build/",
-      "start": "next start",
-      "lint": "next lint"
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+      
+    },
+    "browserslist": {
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
     }
   }
   
